Add GptBytePairEncodingOriginal for testing